--- a/install_apache.yml
+++ b/install_apache.yml
@@ -34,14 +34,14 @@
           #- ansible_distribution == "CentOS"
 
     - name: update repository index
-      dnf:
+      yum:
         update_cache: yes
       when:
          - ansible_os_family == "RedHat" 
          - ansible_distribution == "CentOs"
 
     - name: install apache2 package
-      dnf:
+      yum:
         name: httpd
         state: latest
       when:
