--- a/install_apache.yml
+++ b/install_apache.yml
@@ -5,18 +5,14 @@
   become_user: root
   gather_facts: yes
   tasks:
-    - name: update repository index
-      apt: 
-        update_cache: yes
-      when: ansible_distribution == "Ubuntu"
 
-    - name: install apache2 and php packages for Ubuntu
-      apt:
+    - name: install apache2 and php packages and update the repository.
+      package:
         name: 
-          - apache2
-          - libapache2-mod-php
+          - "{{ apache_package }}"
+          - "{{ php_package }}"
         state: latest
-      when: ansible_distribution == "Ubuntu"
+        update_cache: yes
 
 
       #- name: Install apache2 for centos systems
@@ -28,20 +24,3 @@
        #when:
            #- ansible_os_family == "RedHat"
           #- ansible_distribution == "CentOS"
-
-    - name: update repository index
-      yum:
-        update_cache: yes
-      when:
-         - ansible_os_family == "RedHat" 
-         - ansible_distribution == "CentOs"
-
-    - name: install apache2 and php packages for CentOs
-      yum:
-        name: 
-          - httpd
-          - php
-        state: latest
-      when:
-         - ansible_os_family == "RedHat"
-         - ansible_distribution == "CentOs"
